--- a/.github/workflows/nix-cache.yml
+++ b/.github/workflows/nix-cache.yml
@@ -26,6 +26,11 @@ jobs:
           extra_nix_config: |
             experimental-features = nix-command flakes
 
+      - name: Configure devenv cache (read-only)
+        uses: cachix/cachix-action@v16
+        with:
+          name: devenv
+
       - name: Configure Cachix
         if: ${{ vars.CACHIX_CACHE_NAME != '' }}
         uses: cachix/cachix-action@v16
@@ -35,5 +40,8 @@ jobs:
           # Fork PRs cannot access secrets. Read-only mode still allows cache pulls.
           skipPush: ${{ github.event_name == 'pull_request' || secrets.CACHIX_AUTH_TOKEN == '' }}
 
+      - name: Install devenv
+        run: nix profile install nixpkgs#devenv
+
       - name: Run devenv tests
-        run: nix run github:cachix/devenv/latest -- test
+        run: devenv test
