--- a/.github/workflows/nix-cache.yml
+++ b/.github/workflows/nix-cache.yml
@@ -43,5 +43,5 @@ jobs:
       - name: Install devenv
         run: nix profile install nixpkgs#devenv
 
-      - name: Run devenv tests
-        run: devenv test
+      - name: Verify devenv setup
+        run: devenv info
